--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-    <script>
+    <!-- <script>
       $(document).ready(function () {
         var $videoSrc;
         $(".play__trailer").click(function () {
@@ -100,6 +100,6 @@
           $("#video").attr("src", $videoSrc);
         });
       });
-    </script>
+    </script> -->
   </body>
 </html>
