--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hệ thống đặt vé xem phim trực tuyến.</title>
+    <title>MRA - Hệ thống đặt vé xem phim trực tuyến.</title>
   </head>
 
   <body>
